updated after using sonarlint