@@ -1,28 +1,24 @@
 package com.anguyen.photogram.converter;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.convention.NameTokenizers;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class Converter {
     public static <T> T toModel(final Object obj, final Class<T> zClass) {
         ModelMapper modelMapper = new ModelMapper();
         modelMapper.getConfiguration().setSourceNameTokenizer(NameTokenizers.UNDERSCORE);
-        return (T) modelMapper.map(obj, zClass);
+        return modelMapper.map(obj, zClass);
     }
 
     public static <T, Y> List<T> toList(final List<Y> list, final Class<T> zClass) {
-        return list.stream().map(e -> toModel(e, zClass)).collect(Collectors.toList());
+        return list.stream().map(e -> toModel(e, zClass)).toList();
     }
 
-    public static <T> T stringToJson(final String obj, final Class<T> zClass) throws JsonProcessingException {
-        ObjectMapper objectMapper = new ObjectMapper();
-        return objectMapper.readValue(obj, zClass);
+    private Converter() {
+        throw new UnsupportedOperationException("This is a utility class and cannot be instantiated");
     }
 }
